--- a/TestMyo/.gitignore
+++ b/TestMyo/.gitignore
@@ -5,6 +5,7 @@ Temp/
 Obj/
 UnityGenerated/
 Library/
+Output/
 
 # ===================================== #
 # Visual Studio / MonoDevelop generated #
